# SLR-Parser

./: CMakeLists.txt  README.md  debug.txt  test.txt
include/: Grammar.hpp  SLR_gen.hpp  gram.l  lexer.hpp  syntax_analyzer.hpp  token.hpp
src/: Grammar.cpp  SLR_gen.cpp  lexer.cpp  main.cpp  syntax_analyzer.cpp
